修改文件: _posts/2019-12-15-HTML&CSS-第5章 图像.md

--- a/_posts/2019-12-15-HTML&CSS-第5章 图像.md
+++ b/_posts/2019-12-15-HTML&CSS-第5章 图像.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-12-15-HTML&CSS-第5章 图像"
+title:    "HTML&CSS-第5章 图像"
 date:   2019-12-15  11:22 
 last_modified_at:  2019-12-15 
 categories: web
@@ -11,6 +11,8 @@ categories: web
 - 如何添加图像
 - 选择合适的图像格式
 - 优化图像让页面加载更快
+
+<!--more-->
 
 # 选择图像
 
@@ -76,24 +78,27 @@ categories: web
 
 # 创建图像的三条原则
 
-1. 使用正确的格式保存图像
+**1. 使用正确的格式保存图像**
   - jpeg：色彩丰富，有层次感，一般为自然景色
   - png：色彩单一，大面积同色，一般为几何图
   - gif：简单的插画（不要当视频使用），每一帧多余的图像都会增加文件大小增加加载时间
-2. 以正确的大小保存图像
+
+**2. 以正确的大小保存图像**
 根据网页显示的大小来设置图像的原始尺寸，过小会被拉伸变形，过大会增大加载时间。
-3. 以像素衡量图像（不是分辨率）
+
+**3. 以像素衡量图像（不是分辨率）**
 分辨率是会随着用户自己设备设置而不同，而像素是设备的最小基本单位，所以应使用像素值衡量图像的尺寸，而不是厘米或英寸为单位。
 
 >在网页中使用图像时（对图像质量无太高要求），最好再使用压缩软件进行压缩，可以显著减小图片内存大小，同时质量也不会降低太多，从而加快加载速度
 
 # 图像工具推荐
 
-- 请参考文章：[办公软件使用合集](https://lonlypan.com/archivers/办公软件使用合集)
-- 目前使用有三种
-- krita：开源免费，专业绘画软件，代替Ps
-- picpick：个人免费，屏幕截图+编辑，有着强大的编辑功能，平时也作为简单图片编辑使用。
-- pngyu：开源免费，png格式图片压缩，嵌入到博客文章里，提升加载速度。
+- [krita](https://krita.org/zh/)：开源免费，专业绘画软件，代替Ps
+- [picpick](https://picpick.app/zh/)：个人免费，屏幕截图+编辑，有着强大的编辑功能，平时也作为简单图片编辑使用。
+- [pngyu](https://pngquant.org/)：开源免费，png格式图片压缩，嵌入到博客文章里，提升加载速度。
+
+具体请参考文章：[办公软件使用合集](https://lonlypan.com/archivers/办公软件使用合集)
+
 
 
 
