修改文件: _posts/2019-12-15-HTML&CSS-第5章 图像.md

--- a/_posts/2019-12-15-HTML&CSS-第5章 图像.md
+++ b/_posts/2019-12-15-HTML&CSS-第5章 图像.md
@@ -6,7 +6,7 @@ last_modified_at:  2019-12-15
 categories: web
 ---
 
-一图胜千言，好的图像可以更好的呈现网站内容，本站将学习：
+一图胜千言，好的图像可以更好的呈现网站内容，本章将学习：
 
 - 如何添加图像
 - 选择合适的图像格式
@@ -36,13 +36,13 @@ categories: web
 
 ## 其它属性
 
-**title** 
+**title**   
 有关图像的附加信息，当用户将光标悬停在图像上时显示出来（正常时不显示出来）
 
-**height**
+**height**  
 以像素为单位指定图像的高度
 
-**width**
+**width**  
 以像素为单位指定图像的宽度
 
 >指定图像尺寸，可以让浏览器加载时提前预留空间，从而继续显示其他文本
@@ -62,9 +62,9 @@ categories: web
 
 # 旧代码 align
 
-只 HTML5 中不在支持的属性，而采用 CSS 代替。但一些网站或编译器可能仍然会采用
+指 HTML5 中不再支持的属性，而采用 CSS 代替。但一些网站或编译器可能仍然会采用
 
-**align**
+**align**  
 控制页面其他部分相对图片的位置，有以下几个属性值
 - left：图像左对齐，文本在右侧
 - right：图像右对齐，文本在左侧
@@ -78,15 +78,15 @@ categories: web
 
 # 创建图像的三条原则
 
-**1. 使用正确的格式保存图像**
+**1. 使用正确的格式保存图像**  
   - jpeg：色彩丰富，有层次感，一般为自然景色
   - png：色彩单一，大面积同色，一般为几何图
   - gif：简单的插画（不要当视频使用），每一帧多余的图像都会增加文件大小增加加载时间
 
-**2. 以正确的大小保存图像**
+**2. 以正确的大小保存图像**  
 根据网页显示的大小来设置图像的原始尺寸，过小会被拉伸变形，过大会增大加载时间。
 
-**3. 以像素衡量图像（不是分辨率）**
+**3. 以像素衡量图像（不是分辨率）**  
 分辨率是会随着用户自己设备设置而不同，而像素是设备的最小基本单位，所以应使用像素值衡量图像的尺寸，而不是厘米或英寸为单位。
 
 >在网页中使用图像时（对图像质量无太高要求），最好再使用压缩软件进行压缩，可以显著减小图片内存大小，同时质量也不会降低太多，从而加快加载速度
