修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -2,12 +2,13 @@
 layout: post
 title: "编码规范"
 data: 2019-9-3 15:15
+last_modified_at:  2020-04-08
 categories:  办公
 ---
 
-**version：** V0.2
-**date：**  2020-04-08
-**Modification：**  
+**version：** V0.2  
+**date：**  2020-04-08  
+**Modification：**    
   - 删除一些冗余、繁杂规范
   - 修改部分规范
 
@@ -19,7 +20,7 @@ categories:  办公
 * 组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里
 * const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别
 
->具体使用规则参考文后的使用示例
+>**具体使用规则参考文后的使用示例**
 
 ## 目录结构
 **建议将工程按照功能模块划分子目录，子目录再定义头文件和源文件目录**
@@ -139,8 +140,9 @@ categories:  办公
 |  temp  |  tmp  | 	  | 	   |
 
 
-### 缩写及含义
-```c
+### 常用缩写及含义
+
+```
 @file              文件名
 @author            作者
 @brief             简要说明
@@ -192,10 +194,10 @@ extern "C" {
 
 class Box               // 类声明，首字母大写
 {
-  private： // 缩进两格
+  private: // 缩进两格
     string table_name_;  //  缩进两格，后加下划线.
     
-  public： // 数据成员最好全私有，使用函数访问修改
+  public: // 数据成员最好全私有，使用函数访问修改
     void set_table_name();  // 通用该规则命名  
 ...
 };
@@ -292,9 +294,7 @@ void function1(void)  // 全小写，下划线连接
   */
 void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
 {
-    赋值语句*********;  /* file attribute 不建议使用 “//xxx”*/ 
-    语句***********;  /* file attribute */ 
-    语句*******;  /* file attribute */ 
+    ......
 }
 ```
 
