修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -277,6 +277,8 @@ void function1(void)  // 全小写，下划线连接
 
 ### 函数
 
+**函数声明处注释函数的功能、性能即用法，包括输入输出函数、函数返回值、可重入的要求等；定义处详细描述函数功能和实现要点，如实现的简要步骤、实现的理由、设计约束等**
+
 ```c 
 /**
   * @brief     xxx  // 简介
