修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -2,7 +2,7 @@
 layout: post
 title: "程序在内存中的分布"
 data: 2020-4-11 14:18
-categories:  C&C++
+categories:  c&c++
 ---
 
 **函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。
