--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "程序在内存中的分布"
+title: "2020-4-11-new和malloc"
 data: 2020-4-11 14:18
 categories:  c&c++
 ---
@@ -10,7 +10,7 @@ categories:  c&c++
 
 ## 内存分布
 
-![Diagram](./attachments/1586588020198.drawio.html)
+
 
 **1. stack栈区**
 1. 存储自动变量、每次函数调用时需要保存的信息（函数参数，函数内局部变量，函数返回值，函数调用时的返回地址）
