修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -5,12 +5,12 @@ data: 2020-4-11 14:18
 categories:  c&c++
 ---
 
-**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。
+**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。  
 **程序执行：** 从main() 函数的 '{' 开始，到 '}' 结束，这之后启动执行下一个程序。但其实对于大多数没有操作系统的单片机来说，只有一个main() 函数，程序执行结束则意味着重启或停机。
 
 ## 内存分布
 
-
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-4-11-new和malloc/程序内存分布.png)
 
 **1. stack栈区**
 1. 存储自动变量、每次函数调用时需要保存的信息（函数参数，函数内局部变量，函数返回值，函数调用时的返回地址）
@@ -53,7 +53,7 @@ categories:  c&c++
 
   可以理解为系统运行时的用到的各种 **用户可修改的变量**，比如 "Path" 变量，里面存储了一些常用命令所存放的目录路径， 当用户将自定义文件目录添加到 "Path" 下之后，运行某些程序除了在当前文件夹查找，还会到设置的 Path 路径中区查找。还比如 **系统语言** 等变量。
 
-参考资料：
+参考资料：  
 [1. main函数——命令行参数与环境变量](https://blog.51cto.com/muhuizz/1767467)  
 
 ## 堆和栈的区别
@@ -92,6 +92,6 @@ main()
 ```
 ## 参考资料
 
-[1. 程序在内存中的分布](https://www.cnblogs.com/Lynn-Zhang/p/5449199.html)
-[2. 程序在内存中的分布](https://www.jianshu.com/p/155e83ba18b8)
+[1. 程序在内存中的分布](https://www.cnblogs.com/Lynn-Zhang/p/5449199.html)  
+[2. 程序在内存中的分布](https://www.jianshu.com/p/155e83ba18b8)  
 [3. C 程序的内存空间布局](https://blog.csdn.net/why19911024/article/details/53033426)
