修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -3,8 +3,14 @@ layout: post
 title: "编码规范"
 data: 2019-9-3 15:15
 last_modified_at:  2020-04-08
-categories:  办公
+categories: c&c++
 ---
+
+**version：** V0.3
+**date：**  2020-04-13  
+**Modification：**    
+  - 修改代码示例
+
 
 **version：** V0.2  
 **date：**  2020-04-08  
@@ -49,6 +55,7 @@ categories:  办公
 * 避免名字中出现数字编号
 * 标识符前不应添加模块、项目、产品、部门的名称作为前缀
 * **全局变量应增加"g_"前缀，静态增加"s_"前缀，指针增加"p_"前缀**
+*   注意在局部作用域中（单个文件内全局访问）的“全局变量”应视为局部变量，且建议使用静态前缀"s_"加以限定。
 * 类名、结构体、类型定义（typedef）首字母大写，其余小写，下划线连接
 * 类的数据成员在通用规格上后接下划线”_“，这样可以避免数据成员与成员函数的参数同名。
 * **宏、数值、字符串、枚举等等常量的定义，建议采用全大写字母，使用下划线"_"连接**
@@ -167,7 +174,7 @@ categories:  办公
   * @brief：  Header file of xxx module  // 用于详细说明此程序文件完成的主要功能，与其他模块  
   *                                     // 或函数的接口，输出值、取值范围、含义及参数间的控
   *                                     // 制、顺序、独立或依赖等关系
-  * @attention：             // 其他内容说明
+  * @attention：             // 注意事项
   * @Modification:本次版本修改添加了xxxx
   * @History:     // 修改历史记录表
   *   1.Version: 历史版本号
@@ -182,9 +189,9 @@ categories:  办公
 #define __XXX_XX_H
 
 /* Includes ------------------------------------------------------------------*/
-#include <math.h>       // 引用标准库的头文件
+#include <math.h>       /* 引用标准库的头文件 */
 ...
-#include “myheader.h”   // 引用非标准库的头文件
+#include “myheader.h”   /* 引用非标准库的头文件 */
 
 /* just for C/C++ Hybrid Programming*/
 /* 禁止在extern "C"包含头文件 */
@@ -192,21 +199,30 @@ categories:  办公
 extern "C" {
 #endif
 
-class Box               // 类声明，首字母大写
+class Box               /* 类声明，首字母大写 */
 {
-  private: // 缩进两格
-    string table_name_;  //  缩进两格，后加下划线.
+  private: /* 缩进两格 */
+    /* 数据成员最好全私有，使用函数访问修改 */
+    string table_name_;  /*  缩进两格，后加下划线. */
     
-  public: // 数据成员最好全私有，使用函数访问修改
+  public:
+   /**
+   * @brief     xxx  // 简介
+   * @note   // 注意事项
+   * @param xxx // 参数
+   * @retval     xxx  // 返回值
+   */
+   /* 函数声明处注释函数的功能、性能及用法，包括输入输出函数、函数返回值、可重入的要求等 */
     void set_table_name();  // 通用该规则命名  
-...
+    ...
 };
 
 #define PI 3.14   // 全大写
 const int MI = 1356;  // 全大写
 extern int day_number  = 0;  // 通用规则
 
-#define FOO(x) do{ \
+/* 使用完备的 {...} ，并使用 do...while 结构 */
+#define FOO(x) do{ \         /* 尽量少用define、使用const代替define */
         printf("arg is %s\n", x); \
         do_something_useful(x); \
 } while(0)
@@ -227,7 +243,7 @@ extern int day_number  = 0;  // 通用规则
 ### 源文件
 
 ```c++
-/**
+/** 和同文件相同，但删除版本信息（多余）
   * Copyright (c)   LonlyPan . 1998-2011. 
   * All rights reserved.  // 1998为创建日期，2011为最新文件修改日期
   * @file： lcdmenu.c
@@ -237,15 +253,6 @@ extern int day_number  = 0;  // 通用规则
   * @brief：  Header file of xxx module  // 用于详细说明此程序文件完成的主要功能，与其他模块  
   *                                     // 或函数的接口，输出值、取值范围、含义及参数间的控
   *                                     // 制、顺序、独立或依赖等关系
-  * @attention：                  // 其他内容说明
-  * @Modification:本次版本修改添加了xxxx
-  * @History:     // 修改历史记录表
-  *   1.Version: 历史版本号
-  *   Author:
-  *     date: 历史版本日期
-  *     Modification: 历史版本修改内容
-  *   2.Version: 历史版本号
-  *          ......
   */
 #include <math.h>       // 引用标准库的头文件
 ...
@@ -259,13 +266,15 @@ extern "C" {
 
 int day_number  = 0;  // 通用规则
 
-#if defined(xxx)
-...
-#endif  /* xxx */
-
 /* User code------------------------------------------------------------------*/
 
-void function1(void)  // 全小写，下划线连接
+/**
+ * @note   // 注解信息
+ * @attention // 注意事项
+ * @detail  // 细节
+ */
+/* 定义处详细描述函数功能和实现要点，如实现的简要步骤、实现的理由、设计约束等 */
+void function1(char *dest,const char *src)  /* 全小写，下划线连接，指针仅作输入用，加const */
 {
     ...
 }
@@ -273,23 +282,6 @@ void function1(void)  // 全小写，下划线连接
 #ifdef __cplusplus
 }
 #endif  /* __cplusplus */
-```
-
-### 函数
-
-**函数声明处注释函数的功能、性能即用法，包括输入输出函数、函数返回值、可重入的要求等；定义处详细描述函数功能和实现要点，如实现的简要步骤、实现的理由、设计约束等**
-
-```c 
-/**
-  * @brief     xxx  // 简介
-  * @note   // 注意事项
-  * @param xxx // 参数
-  * @retval     xxx  // 返回值
-  */
-void * strcpy(char *dest,const char *src);  // 指针仅作输入用，加const
-{
-    ......
-}
 ```
 
 ### 全局变量
@@ -321,12 +313,13 @@ BYTE g_GTTranErrorCode;
 |  source / target  |  show / hide  | send / receive  | 
 | source / destination  | cut / paste  |  up / down  |
 
-示例：  
+示例：
+```
 int min_sum;  
 int max_sum;  
 int add_user( BYTE \*user_name );  
 int delete_user( BYTE \*user_name );  
-
+```
 ## 参考文档
 
 1、[华为-C语言编程规范](http://discourse-production.oss-cn-shanghai.aliyuncs.com/original/3X/f/6/f6453c68ba08158a78363c4379c3131bb92f3a1f.pdf)  
@@ -334,3 +327,4 @@ int delete_user( BYTE \*user_name );
 3、[Google 开源项目风格指南 (中文版)](https://zh-google-styleguide.readthedocs.io/en/latest/)  
 4、[UNIX 风格的命名习惯](https://blog.csdn.net/querw/article/details/5467438)
 5、[嵌入式C语言编程规范（个人规约）](https://blog.csdn.net/zhanglianpin/article/details/46544431)  
+
