修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -5,12 +5,12 @@ data: 2020-4-11 14:18
 categories:  c&c++
 ---
 
-**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。  
+**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。
 **程序执行：** 从main() 函数的 '{' 开始，到 '}' 结束，这之后启动执行下一个程序。但其实对于大多数没有操作系统的单片机来说，只有一个main() 函数，程序执行结束则意味着重启或停机。
 
 ## 内存分布
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-4-11-程序在内存中的分布/程序内存分布.png)
+![Diagram](./attachments/1586588020198.drawio.html)
 
 **1. stack栈区**
 1. 存储自动变量、每次函数调用时需要保存的信息（函数参数，函数内局部变量，函数返回值，函数调用时的返回地址）
@@ -38,6 +38,9 @@ categories:  c&c++
 1. CPU执行的机器指令，即程序代码。
 2. 只读数据（常量）
 
+>**总结如下：**
+堆栈和数据区存放的都是变量，但堆栈存放程序运行时的数据（由系统分配）。数据区则是在编译器编译期就已经分配好的
+代码段存放代码和常量，即变量之外的数据
 
 **5. 命令行参数和环境变量**
 
@@ -53,7 +56,7 @@ categories:  c&c++
 
   可以理解为系统运行时的用到的各种 **用户可修改的变量**，比如 "Path" 变量，里面存储了一些常用命令所存放的目录路径， 当用户将自定义文件目录添加到 "Path" 下之后，运行某些程序除了在当前文件夹查找，还会到设置的 Path 路径中区查找。还比如 **系统语言** 等变量。
 
-参考资料：  
+参考资料：
 [1. main函数——命令行参数与环境变量](https://blog.51cto.com/muhuizz/1767467)  
 
 ## 堆和栈的区别
@@ -74,11 +77,12 @@ categories:  c&c++
 
 ## 程序举例
 
+### C程序
 ```c 
 int a = 0;      // a 在 data
 char *p1;       // p1 在 bss
 
-main()
+main()            /* 函数体在代码段 */
 {
     int b;                      // b 在 stack
     char s[] = "abc";           // s 在 stack, abc\0 在text代码段
@@ -89,9 +93,47 @@ main()
     p2 = (char *)malloc(20);    // 申请的20字节内存在 heap, stack 中的指针 p2 指向heap中的内存
     strcpy(p1, "123456");       // 123456\0 在text代码段，编译器可能会将它与 p3 所指向的 "123456" 优化成一块
 }
+
 ```
+
+### C++程序
+
+
+```cpp
+
+/* 类本身即其内部成员存储在代码区，不占用任何其它内存，只是一段代码，必须实例化才会具有意义 */
+class MyObject{
+    int a;
+    
+    void func1();
+};
+
+MyObject obj1;   /* 语句1 */
+MyObject *obj2 = new MyObject;   /* 语句2 */
+
+void MyObject::func1(){
+    MyObject obj3;   /* 语句3 */
+    MyObject *obj4 = new MyObject;   /* 语句 4*/
+}
+```
+
+**函数外部：**
+语句1实例化的对象及其一般数据成员存放在全局数据段
+语句2实例化的对象及其一般数据成员存放在堆区，因为使用 new 分配。
+
+**函数外部**：
+语句3 实例化的对象及其一般数据成员存放在栈中，随着函数执行结束而结束
+语句4 实例化的对象及其一般数据成员存放在堆中，随着函数执行结束而结束。但此时销毁的只是指针 obj4，其指向的对象并没有，也就是还在占用内容，会造成内存泄露，所以必须要手动释放。
+
 ## 参考资料
 
-[1. 程序在内存中的分布](https://www.cnblogs.com/Lynn-Zhang/p/5449199.html)  
-[2. 程序在内存中的分布](https://www.jianshu.com/p/155e83ba18b8)  
+[1. 程序在内存中的分布](https://www.cnblogs.com/Lynn-Zhang/p/5449199.html)
+[2. 程序在内存中的分布](https://www.jianshu.com/p/155e83ba18b8)
 [3. C 程序的内存空间布局](https://blog.csdn.net/why19911024/article/details/53033426)
+[4. C++：在堆上创建对象，还是在栈上？](https://www.devbean.net/2014/02/cpp-create-object-on-heap-or-stack/#comment-17679)
+[5. c++类的成员变量的存储位置？](https://segmentfault.com/q/1010000004149330)
+[6. c++中的类和实例分别存储在什么地方](https://zhidao.baidu.com/question/1737185158839349467.html)
+[7. C++成员函数在内存中的存储方式](https://blog.csdn.net/fuzhongmin05/article/details/59112081)
+[8. Class Members on Stack Or Heap?](https://www.daniweb.com/programming/software-development/threads/450593/class-members-on-stack-or-heap)
+[9. Memory Layout of C Programs](https://www.geeksforgeeks.org/memory-layout-of-c-program/)
+[10. In what address do the variables get stored when declared in C or C++?](https://www.quora.com/In-what-address-do-the-variables-get-stored-when-declared-in-C-or-C++https://www.quora.com/In-what-address-do-the-variables-get-stored-when-declared-in-C-or-C++)
