修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: "程序在内存中的分布"
+title: "2020-4-11-程序在内存中的分布"
 data: 2020-4-11 14:18
 categories:  c&c++
 ---
 
-**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。  
+**函数执行：** 从函数的  '{' 开始，到 '}' 结束，这之后继续执行下一个函数。
 **程序执行：** 从main() 函数的 '{' 开始，到 '}' 结束，这之后启动执行下一个程序。但其实对于大多数没有操作系统的单片机来说，只有一个main() 函数，程序执行结束则意味着重启或停机。
 
 ## 内存分布
 
-![Diagram](./attachments/1586588020198.drawio.html)
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-4-11-程序在内存中的分布/程序内存分布.png)
 
 **1. stack栈区**
 1. 存储自动变量、每次函数调用时需要保存的信息（函数参数，函数内局部变量，函数返回值，函数调用时的返回地址）
