--- a/_posts/2020-4-13-static 修饰符.md
+++ b/_posts/2020-4-13-static 修饰符.md
@@ -11,7 +11,8 @@ categories:  c&c++
 
 static作为C和C++语句中的修饰符，可以**修饰变量和函数**，主要用于**控制变量的存储方式和可见性**。
 
-为了更好理解 static 作用，我们需要先了解程序在内存中的分布情况，具体请参考文章  [程序在内存中的分布](https://lonlypan.com/archivers/程序在内存中的分布)
+为了更好理解 static 作用，我们需要先了解程序在内存中的分布情况，具体请参考文章  
+[程序在内存中的分布](https://lonlypan.com/archivers/程序在内存中的分布)
 
 # static的内部机制
 
@@ -125,12 +126,12 @@ void main()
 ### 静态函数和一般函数对比
 
 **存储方式：**
-- 函数都是存储在代码段，static并不改变存储位置。
+- 函数都是存储在代码段，`static`并不改变存储位置。
 
 **可见性：**
-- 静态函数不能被其它文件所用，只能在其定义的文件内使用，而一般函数可以被任意文件访问（使用extern或包含该函数的声明的头文件）
+- 静态函数不能被其它文件所用，只能在其定义的文件内使用，而一般函数可以被任意文件访问（使用`extern`或包含该函数的声明的头文件）
 - 因此其它文件中可以定义相同名字的函数，不会发生冲突(因为static隔离了文件，其它文件使用相同的名字的变量，也跟它没关系了);
-- 
+
 **初始化**
 - 好像没这个说法
 
@@ -140,8 +141,8 @@ C++ 中除了包含上述三种用法和概念外，还有额外两种用法。
 
 ## 1、静态数据成员
 
-用于修饰 class 的数据成员，即所谓“静态成员”。这种数据成员的生存期大于 class 的对象（实体 instance）。  
-静态数据成员是每个 class 有一份（即所有类实例共享一个该变量），普通数据成员是每个 instance 有一份（即每个实例都有各自的该变量，互相独立），因此静态数据成员也叫做类变量，而普通数据成员也叫做实例变量
+用于修饰 `class` 的数据成员，即所谓“静态成员”。这种数据成员的生存期大于 `class` 的对象（实体 instance）。  
+静态数据成员是每个 `class` 有一份（即所有类实例共享一个该变量），普通数据成员是每个 `instance` 有一份（即每个实例都有各自的该变量，互相独立），因此静态数据成员也叫做类变量，而普通数据成员也叫做实例变量
 
 ```cpp
 
@@ -199,13 +200,13 @@ sizeof(rect2)=8
 */
 
 ```
-由图可知。所有类或类对象的占用内存都为 8 bytes = 两个int 型变量的内存和。也就是说静态成员并不占用类Rectangle和其对象的内存空间。
-那么static在哪里分配内存的呢？是的，全局数据区(静态区)。
-再看看GetSum()，第一次12=3*4，第二次18=12+2*3。由此可得，所有类实例共享一个 sum ，且 sum 只会被初始化一次，于实例无关。
+由图可知。所有类或类对象的占用内存都为 8 bytes = 两个int 型变量的内存和。也就是说静态成员并不占用类`Rectangle`和其对象的内存空间。
+那么`static`在哪里分配内存的呢？是的，全局数据区(静态区)。
+再看看`GetSum()`，第一次 12=3\*4，第二次 18=12+2\*3。由此可得，所有类实例共享一个 `sum` ，且 `sum` 只会被初始化一次，与实例无关。
 
 **存储方式：**
 - 静态成员在数据段分配内存（独立于类实例）
-- 一般数据成员，请参考文章  [程序在内存中的分布](https://lonlypan.com/archivers/程序在内存中的分布)
+- 一般数据成员，请参考文章  [《程序在内存中的分布》](https://lonlypan.com/archivers/程序在内存中的分布)
 
 **可见性：**
 - 由于静态数据成员不属于特定的类实例，所以在没有类实例时其在作用域就可见（即可访问）
@@ -283,12 +284,12 @@ int main()
 
 # 参考资料
 
-[1. C++static类成员，static类成员函数](https://blog.csdn.net/u014453898/article/details/64124269)
-[2. c++中static的用法详解](https://blog.csdn.net/majianfei1023/article/details/45290467)
-[3. c++ static的作用，以及static对象在类和函数中区别](https://blog.csdn.net/dqjyong/article/details/7976735)
-[4. C++之静态详解](http://harlon.org/2018/03/21/cpluscplusstatic/)
-[5. static作用（修饰函数、局部变量、全局变量）](https://www.cnblogs.com/stoneJin/archive/2011/09/21/2183313.html)
-[6. C/C++ 中的static关键字](https://zhuanlan.zhihu.com/p/37439983)
-[7. C++ 局部静态变量，全局变量，全局静态变量，局部变量的区别和联系](https://www.cnblogs.com/secondtonone1/p/5694436.html)
-[8. C++局部静态变量在什么时候分配内存和初始化？](https://segmentfault.com/q/1010000004157283)
-[9. C++ static、const 和 static const 类型成员变量声明以及初始化](https://www.runoob.com/w3cnote/cpp-static-const.html)
+[1. C\++static类成员，static类成员函数](https://blog.csdn.net/u014453898/article/details/64124269)  
+[2. c\++中static的用法详解](https://blog.csdn.net/majianfei1023/article/details/45290467)  
+[3. c\++ static的作用，以及static对象在类和函数中区别](https://blog.csdn.net/dqjyong/article/details/7976735)  
+[4. C\++之静态详解](http://harlon.org/2018/03/21/cpluscplusstatic/)  
+[5. static作用（修饰函数、局部变量、全局变量）](https://www.cnblogs.com/stoneJin/archive/2011/09/21/2183313.html)  
+[6. C/C++ 中的static关键字](https://zhuanlan.zhihu.com/p/37439983)  
+[7. C\++ 局部静态变量，全局变量，全局静态变量，局部变量的区别和联系](https://www.cnblogs.com/secondtonone1/p/5694436.html)  
+[8. C\++局部静态变量在什么时候分配内存和初始化？](https://segmentfault.com/q/1010000004157283)  
+[9. C\++ static、const 和 static const 类型成员变量声明以及初始化](https://www.runoob.com/w3cnote/cpp-static-const.html)  
