修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -65,7 +65,7 @@ categories:  c&c++
 - 堆是动态分配的，其空间的分配和释放都由程序员控制。
 - 栈由编译器自动管理。栈有两种分配方式：静态分配和动态分配。
   - 静态分配由编译器完成，比如局部变量的分配。
-  - 动态分配由alloca()函数进行分配，但是栈的动态分配和堆是不同的，它的动态分配是由编译器进行释放，无须手工控制。
+  - 动态分配由`malloc()`函数进行分配，但是栈的动态分配和堆是不同的，它的动态分配是由编译器进行释放，无须手工控制。
 
 **2.产生碎片不同**
 - 对堆来说，频繁的new/delete或者malloc/free势必会造成内存空间的不连续，造成大量的碎片，使程序效率降低。
@@ -130,10 +130,10 @@ void MyObject::func1(){
 [1. 程序在内存中的分布](https://www.cnblogs.com/Lynn-Zhang/p/5449199.html)  
 [2. 程序在内存中的分布](https://www.jianshu.com/p/155e83ba18b8)  
 [3. C 程序的内存空间布局](https://blog.csdn.net/why19911024/article/details/53033426)  
-[4. C++：在堆上创建对象，还是在栈上？](https://www.devbean.net/2014/02/cpp-create-object-on-heap-or-stack/#comment-17679)  
-[5. c++类的成员变量的存储位置？](https://segmentfault.com/q/1010000004149330)  
-[6. c++中的类和实例分别存储在什么地方](https://zhidao.baidu.com/question/1737185158839349467.html)  
-[7. C++成员函数在内存中的存储方式](https://blog.csdn.net/fuzhongmin05/article/details/59112081)  
+[4. C\++：在堆上创建对象，还是在栈上？](https://www.devbean.net/2014/02/cpp-create-object-on-heap-or-stack/#comment-17679)  
+[5. c\++类的成员变量的存储位置？](https://segmentfault.com/q/1010000004149330)  
+[6. c\++中的类和实例分别存储在什么地方](https://zhidao.baidu.com/question/1737185158839349467.html)  
+[7. C\++成员函数在内存中的存储方式](https://blog.csdn.net/fuzhongmin05/article/details/59112081)  
 [8. Class Members on Stack Or Heap?](https://www.daniweb.com/programming/software-development/threads/450593/class-members-on-stack-or-heap)  
 [9. Memory Layout of C Programs](https://www.geeksforgeeks.org/memory-layout-of-c-program/)  
 [10. In what address do the variables get stored when declared in C or C++?](https://www.quora.com/In-what-address-do-the-variables-get-stored-when-declared-in-C-or-C++https://www.quora.com/In-what-address-do-the-variables-get-stored-when-declared-in-C-or-C++)  
