修改文件: _posts/2020-4-13-static 修饰符.md

--- a/_posts/2020-4-13-static 修饰符.md
+++ b/_posts/2020-4-13-static 修饰符.md
@@ -14,6 +14,8 @@ static作为C和C++语句中的修饰符，可以**修饰变量和函数**，主
 为了更好理解 static 作用，我们需要先了解程序在内存中的分布情况，具体请参考文章  
 [程序在内存中的分布](https://lonlypan.com/archivers/程序在内存中的分布)
 
+<!--more-->
+
 # static的内部机制
 
 static修饰的数据成员是在数据段定义的，数据段同样也存放了全局变量，静态数据成员按定义出现的先后顺序依次初始化，注意静态成员嵌套时，要保证所嵌套的成员已经初始化了。消除时的顺序是初始化的反顺序。
