修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -6,7 +6,7 @@ categories:  c&c++
 ---
 
 **函数执行：** 从函数的  `{` 开始，到 `}` 结束，这之后继续执行下一个函数。  
-**程序执行：** 从main() 函数的 `{`开始，到 `}` 结束，这之后启动执行下一个程序。但其实对于大多数没有操作系统的单片机来说，只有一个 `main()` 函数，程序执行结束则意味着重启或停机。
+**程序执行：** 从`main()` 函数的 `{`开始，到 `}` 结束，这之后启动执行下一个程序。但其实对于大多数没有操作系统的单片机来说，只有一个 `main()` 函数，程序执行结束则意味着重启或停机。
 
 <!--more-->
 
