修改文件: _posts/2020-4-11-程序在内存中的分布.md

--- a/_posts/2020-4-11-程序在内存中的分布.md
+++ b/_posts/2020-4-11-程序在内存中的分布.md
@@ -27,11 +27,11 @@ categories:  c&c++
 
 编译器编译时就已经分配好内存
 
-- bbs段
+- **bbs段**
 
   未初始化的变量，在执行时由系统初始化为 0。例如：对于全局数组，会在程序执行（main函数开始）之前由系统全部初始化为0。
 
-- data段
+- **data段**
 
   具有明确初始值的变量
 
