修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -6,18 +6,6 @@ last_modified_at:  2020-04-08
 categories: c&c++
 ---
 
-**version：** V0.3
-**date：**  2020-04-13  
-**Modification：**    
-  - 修改代码示例
-
-
-**version：** V0.2  
-**date：**  2020-04-08  
-**Modification：**    
-  - 删除一些冗余、繁杂规范
-  - 修改部分规范
-
 ## 自己需要改正的地方
 
 * 建议使用"/*...*/"进行注释，多行单行都适用
@@ -320,6 +308,21 @@ int max_sum;
 int add_user( BYTE \*user_name );  
 int delete_user( BYTE \*user_name );  
 ```
+
+## 版本信息
+
+**version：** V0.3  
+**date：**  2020-04-13  
+**Modification：**    
+  - 修改代码示例
+
+**version：** V0.2  
+**date：**  2020-04-08  
+**Modification：**    
+    - 删除一些冗余、繁杂规范
+    - 修改部分规范
+
+
 ## 参考文档
 
 1、[华为-C语言编程规范](http://discourse-production.oss-cn-shanghai.aliyuncs.com/original/3X/f/6/f6453c68ba08158a78363c4379c3131bb92f3a1f.pdf)  
