--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -8,11 +8,11 @@ categories: c&c++
 
 ## 自己需要改正的地方
 
-* 建议使用"/*...*/"进行注释，多行单行都适用
-* 全局变量应增加”g_“前缀，静态增加”s_“前缀，下划线连接
-* 定义函数时左花括号”{“单独占一行，其他的`if`、`while`、`for`等语句建议紧随其后
-* 组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里
-* const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别
+* 建议使用 `/*...*/` 进行注释，多行单行都适用
+* 全局变量应增加”g_“前缀，静态增加 `s_` 前缀，下划线连接
+* 定义函数时左花括号”{“单独占一行，其他的 `if`、`while`、`for` 等语句建议紧随其后
+* 组成 `switch、while、do...while` 或 `for` 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在 `{}`里
+* `const、virtual、inline、case` 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号 `(`，以与关键字区别
 
 >**具体使用规则参考文后的使用示例**
 
