修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -13,6 +13,7 @@ categories: c&c++
 * 定义函数时左花括号”{“单独占一行，其他的 `if`、`while`、`for` 等语句建议紧随其后
 * 组成 `switch、while、do...while` 或 `for` 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在 `{}`里
 * `const、virtual、inline、case` 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号 `(`，以与关键字区别
+<!--more-->
 
 >**具体使用规则参考文后的使用示例**
 
