修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -58,5 +58,5 @@ images/Posts/\{\{title\}\}/\{\{filename\}\}
 ## 问题
 
 请参考：  
-[小书匠语法使用手册-适配本博客](https://lonlypan.com/archivers/小书匠与Markdown语法使用手册)  
+[小书匠语法使用手册](https://lonlypan.com/archivers/小书匠语法使用手册)  
 文末的章节：**博客文章书写注意事项**
