--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -55,7 +55,7 @@ images/Posts/\{\{title\}\}/\{\{filename\}\}
 实际图片存储位置：  
 `https://github.com/LonlyPan/LonlyPan.github.io/tree/master/images/Posts`
 
-## 问题
+## 小书匠使用问题
 
 请参考：  
 [小书匠语法使用手册](https://lonlypan.com/archivers/小书匠语法使用手册)  
