修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -38,6 +38,7 @@ categories: c&c++
 * 用 `#include <...>` 格式来引用标准库的头文件，用 `#include "..."` 引用非标准库的头文件
 * 头文件应当职责单一
 * **头文件中适合放置接口的声明，不适合放置实现**
+  - 类的 public 函数若小于 20行，且是重要函数，可选择写在 `.h` 文件里  
 * **不要在头文件中定义变量**
 * 建议每一个`.c`文件应有一个同名`.h`文件，用于声明需要对外公开的接口
 * **一个模块通常包含多个`.c`文件，建议放在同一个目录下，目录名即为模块名；如果一个模块包含多个子模块，则建议每一个子模块提供一个对外的`.h`，文件名为子模块名**
@@ -161,6 +162,7 @@ categories: c&c++
 @attention         注意信息
 @warning           警告信息
 @see               表示交叉参考
+@TODO              计划内容
 ```
 
 ### 头文件
