修改文件: _posts/2020-05-01- Google文档.md

--- a/_posts/2020-05-01- Google文档.md
+++ b/_posts/2020-05-01- Google文档.md
@@ -6,8 +6,10 @@ last_modified_at: 2020-05-01
 categories: c&c++
 ---
 
+Google文档官方学习资料备份
 
 <!--more-->
+
 Google文档帮助中心：https://support.google.com/docs/?hl=zh-Hans#topic=1382883
 
 添加公式和函数：https://support.google.com/docs/answer/46977?hl=zh-Hans&ref_topic=1361471
