--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "系统自学英语方法"
+title: "Frank自学英语攻略"
 data: 2019-9-6 18:10
 categories:  随笔
 ---
@@ -54,4 +54,25 @@ F级：五年海外留学背景，吴亦凡
 教材：EnglishPOD
 完型-语法-跟读-复述 
 
+课时7：书单推荐
+一星：小王子  词汇量 3000
+二星：Hope to Die 词汇量 5000 = 畅销小说
+三星：Oracle Bones 词汇量 7000 ，语法
+四星：Guns，Germs，and Steel 词汇量13000，较高语法
+五星：Tender is the Night，贼长句
+
+注重语言输入，找到感觉和习惯，而不是理解内容
+
+课时8：直播回顾
+口语练习：英文访谈 
+A级：赖世雄，新概念（非第四册）
+B：3000词汇，ESLPOD
+C：6000词汇，EnglishPOD
+D：起飞
+
+课时9：口语表达最高技巧：换一个说法
+get，have，give，take，make，think，feeling，bad
+
+课时10
+一个人练口语
 
