修改文件: _posts/2020-05-01- Google文档.md

--- a/_posts/2020-05-01- Google文档.md
+++ b/_posts/2020-05-01- Google文档.md
@@ -3,17 +3,17 @@ layout: post
 title: "2020-05-01- Google文档"
 date: 2020-05-01
 last_modified_at: 2020-05-01
-categories: c&c++
+categories: 办公
 ---
 
-Google文档官方学习资料备份
+## Google文档官方学习资料备份
 
 <!--more-->
 
-Google文档帮助中心：https://support.google.com/docs/?hl=zh-Hans#topic=1382883
+[Google文档帮助中心](https://support.google.com/docs/?hl=zh-Hans#topic=1382883)
 
-添加公式和函数：https://support.google.com/docs/answer/46977?hl=zh-Hans&ref_topic=1361471
+[在 Google 表格中添加公式](https://support.google.com/docs/answer/46977?hl=zh-Hans&ref_topic=1361471)
 
-Google 电子表格函数列表：https://support.google.com/docs/table/25273?hl=zh-Hans
+[Google 电子表格函数列表](https://support.google.com/docs/table/25273?hl=zh-Hans)
 
-引用其他工作表中的数据 https://support.google.com/docs/answer/75943?hl=zh-Hans&ref_topic=1361471
+[引用其他工作表中的数据](https://support.google.com/docs/answer/75943?hl=zh-Hans&ref_topic=1361471) 
