修改文件: _posts/2020-05-01- Google文档.md

--- a/_posts/2020-05-01- Google文档.md
+++ b/_posts/2020-05-01- Google文档.md
@@ -8,6 +8,8 @@ categories: 办公
 
 ## Google文档官方学习资料备份
 
+google文档教程很多，单官方文档的入口又往往不易找到，这里去做备份及速查使用。
+
 <!--more-->
 
 [Google文档帮助中心](https://support.google.com/docs/?hl=zh-Hans#topic=1382883)
