--- a/_posts/2020-05-01- Google文档.md
+++ b/_posts/2020-05-01- Google文档.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2020-05-01- Google文档"
+title: "Google官方文档"
 date: 2020-05-01
 last_modified_at: 2020-05-01
 categories: 办公
