修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -44,7 +44,7 @@ categories: 办公
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
 
-你也可以自己修改图片在仓库的存储位置的，变量**{{filename}}** 是图片名，下面的变量：年月日year month date、文章标题title，等都是你的博客`头数据`，这个需要其他知识了，不做详解。注意 "\{\{\}\}" 不要丢，“/” 表示目录。
+你也可以自己修改图片在仓库的存储位置的，变量 `{{filename}}` 是图片名，下面的变量：年月日year month date、文章标题title，等都是你的博客`头数据`，这个需要其他知识了，不做详解。注意 "\{\{\}\}" 不要丢，“/” 表示目录。
 
 我的设置是：  
 images/Posts/\{\{title\}\}/\{\{filename\}\}
