修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -19,12 +19,12 @@ categories: 办公
 图片右半部分就是我们的设置界面，需要配置前两个参数，第三个为默认参数不用修改。
 ![操作与设置界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696458729.png)
 
-2、登录自己的Github，并新建一个仓库，也可以直接使用已经有的。完成后，点击上图底部箭头所指的**跳转链接**直接跳转到**token**申请界面或者点击自己的Github账户头像 `Settings -> Developer settings -> Personal access tokens -> Generate new token `。这个**tokens**相当于一个授权码，授权别人更改你指定仓库下的内容，也就是我们的小书匠软件。
+2、登录自己的Github，并新建一个仓库，也可以直接使用已经有的。完成后，点击上图底部箭头所指的**跳转链接**直接跳转到**token**申请界面或者点击自己的Github账户头像 `Settings -> Developer settings -> Personal access tokens -> Generate new token `。这个**tokens**相当于一个授权码，授权别人更改你指定仓库下的内容，这里我们待会授权给小书匠软件。
 
 按下图设置好，名字随意起，然后下拉网页至最底，点击绿色的`Generate token `按钮。
 ![申请token界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695427415.png)
 
-3、设置成功会显示下面界面，记得保存tokens值，后面还会用到。这个tokens是一次性的，忘了就需要再重新生成，软件再重新绑定。
+3、设置成功会显示下面界面，记得保存tokens值，后面还会用到。这个tokens是单次随机的的，如果删除了小书匠软件上的绑定信息，就需要重新生成tokens值，重新绑定。所以记得保存。
 ![token值](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695914382.png)
 
 4、然后就是你的仓库名了，直接复制就好了。
