修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -44,7 +44,9 @@ categories: 办公
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
 
-你也可以自己修改图片在仓库的存储位置的，如下
+当然我们可以修改图片的默认存储位置的，但这个需要一些Github page 相关知识了：`头数据`。  
+
+先来了解每个变量的意思
 
 |   变量名  |    含义    |
 |---|----|
@@ -54,7 +56,7 @@ categories: 办公
 |     date   |     日    |
 |  title   |    文章标题    |
 
-以上都是你的博客`头数据`，至于 `头数据` 是啥，这个需要 Github page 相关知识了，不做详解。注意 "\{\{\}\}" 不要丢，“/” 表示目录。
+注意 "\{\{\}\}" 不要丢，字符 “/”  表示目录。
 
 我的设置是：  
 images/Posts/\{\{title\}\}/\{\{filename\}\}
