修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -44,7 +44,10 @@ categories: 办公
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
 
-当然我们可以修改图片的默认存储位置的，但这个需要一些Github page 相关知识了：`头数据`。  
+当然我们可以修改图片的默认存储位置的，但
+`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段时固定的，表示仓库位置和分支，无法修改，我们修改只是后面的。
+
+这个还需要一些Github page 相关知识了：`头数据`。  
 
 先来了解每个变量的意思
 
@@ -59,7 +62,7 @@ categories: 办公
 注意 "\{\{\}\}" 不要丢，字符 “/”  表示目录。
 
 我的设置是：  
-images/Posts/\{\{title\}\}/\{\{filename\}\}
+`images/Posts/\{\{title\}\}/\{\{filename\}\}`
 
 这样我的图片保存位置就是：  
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/博客文章标题名/图片名.png)`
