修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -44,10 +44,10 @@ categories: 办公
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
 
-当然我们可以修改图片的默认存储位置的，但
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段时固定的，表示仓库位置和分支，无法修改，我们修改只是后面的。
 
-这个还需要一些Github page 相关知识了：`头数据`。  
+`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段就是上图中的 url 前缀，不建议修改。应因为我是习惯图片和文章都保存在同一个仓库和分之下面。
+
+后面一段`小书匠/xxx.png`，指定了图片在仓库中的位置，默认所有图片存在名为`小书匠`的文件夹下，建议修改，但这个还需要一些Github page 相关知识了：`头数据`。  请自行查阅学习。
 
 先来了解每个变量的意思
 
@@ -67,7 +67,7 @@ categories: 办公
 这样我的图片保存位置就是：  
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/博客文章标题名/图片名.png)`
 
-实际图片存储位置：  
+实际图片存储位置（上面的变量在实际使用时都会替换为实际信息，所以会有不同）：  
 `https://github.com/LonlyPan/LonlyPan.github.io/tree/master/images/Posts`
 
 ## 小书匠使用问题
