修改文件: _posts/2020-05-01- Google文档.md

--- a/_posts/2020-05-01- Google文档.md
+++ b/_posts/2020-05-01- Google文档.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Google官方文档"
+show_title: "Google官方文档"
+title: "2020-05-01Google官方文档"
 date: 2020-05-01
 last_modified_at: 2020-05-04
 categories: 办公
