--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Frank自学英语攻略"
+show_title: "Frank自学英语攻略"
+title: "2020-05-04-Frank自学英语攻略"
 data: 2019-9-6 18:10
 categories:  随笔
 ---
