--- a/_posts/2020-04-28-G-code测试用例生成  & c .md
+++ b/_posts/2020-04-28-G-code测试用例生成  & c .md
@@ -1,5 +1,6 @@
 ---
 layout: post
+show_title: "2020-04-28-G-code测试用例生成  & c "
 title: "2020-04-28-G-code测试用例生成  & c "
 date: 2020-04-28
 last_modified_at: 2020-04-28
