--- a/_posts/2020-04-24-细说 Linux -.md
+++ b/_posts/2020-04-24-细说 Linux -.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "2020-04-24-细说 Linux -"
+show_title: "2020-04-24-细说 Linux -"
+show_title: "2020-04-24-细说 Linux"
 date: 2020-04-24
 last_modified_at: 2020-04-24
 categories: c&c++
