--- a/_posts/2020-04-13-static 修饰符.md
+++ b/_posts/2020-04-13-static 修饰符.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "static 修饰符"
+show_title: "static 修饰符"
+title: "2020-04-13-static 修饰符"
 data: 2020-04-13 14:5
 last_modified_at:  2020-04-13
 categories:  c&c++
