--- a/_posts/2020-04-11-程序在内存中的分布.md
+++ b/_posts/2020-04-11-程序在内存中的分布.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 show_title: "程序在内存中的分布"
-show_title: "2020-04-11-程序在内存中的分布"
+title: "2020-04-11-程序在内存中的分布"
 data: 2020-04-11 14:18
 last_modified_at:  2020-04-13
 categories:  c&c++
