--- a/_posts/2020-03-18-HTML&CSS-第6章 表格.md
+++ b/_posts/2020-03-18-HTML&CSS-第6章 表格.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+show_title:    "2020-03-18-HTML&CSS-第6章 表格"
 title:    "2020-03-18-HTML&CSS-第6章 表格"
 date:   2020-03-18  22:38 
 last_modified_at:  2020-3-18 
