--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "Jekyll 网站添加网站统计"
+show_title:    "Jekyll 网站添加网站统计"
+title:    "2019-12-8-Jekyll 网站添加网站统计"
 date:   2019-12-8  10:10 
 categories: web
 ---
