修改文件: _posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md

--- a/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
+++ b/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "Jekyll 网站添加文章更改日期显示"
+show_title:    "Jekyll 网站添加文章更改日期显示"
+title:    "2019-12-8 -Jekyll 网站添加文章更改日期显示"
 date:   2019-12-8  13:31 
 last_modified_at:  2019-12-8
 categories: web
