修改文件: _posts/2019-12-15-HTML&CSS-第5章 图像.md

--- a/_posts/2019-12-15-HTML&CSS-第5章 图像.md
+++ b/_posts/2019-12-15-HTML&CSS-第5章 图像.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "HTML&CSS-第5章 图像"
+show_title:    "HTML&CSS-第5章 图像"
+title:    "2019-12-15 -HTML&CSS-第5章 图像"
 date:   2019-12-15  11:22 
 last_modified_at:  2019-12-15 
 categories: web
