--- a/_posts/2019-12-15-HTML&CSS-第4章 链接.md
+++ b/_posts/2019-12-15-HTML&CSS-第4章 链接.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "HTML&CSS-第4章 链接"
+show_title:    "HTML&CSS-第4章 链接"
+title:    "2019-12-15 -HTML&CSS-第4章 链接"
 date:   2019-12-15  9:22 
 last_modified_at:  2019-12-15 
 categories: web
