修改文件: _posts/2019-12-14-HTML&CSS-第3章 列表.md

--- a/_posts/2019-12-14-HTML&CSS-第3章 列表.md
+++ b/_posts/2019-12-14-HTML&CSS-第3章 列表.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "HTML&CSS-第3章 列表"
+show_title:    "HTML&CSS-第3章 列表"
+title:    "2019-12-14-HTML&CSS-第3章 列表"
 date:   2019-12-14  15:20 
 last_modified_at:  2019-12-14 
 categories: web
