--- a/_posts/2019-11-24-博客文章写作规范.md
+++ b/_posts/2019-11-24-博客文章写作规范.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "博客文章写作规范"
+show_title:    "博客文章写作规范"
+title:    "2019-11-24-博客文章写作规范"
 date:   2019-11-24  12:10 
 categories: web
 ---
