修改文件: _posts/2019-11-19-J-Link SWD下载错误.md

--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "J-Link SWD下载错误"
+show_title: "J-Link SWD下载错误"
+title: "2019-11-19-J-Link SWD下载错误"
 data: 2019-11-19 15:21
 categories:  atmel
 ---
