修改文件: _posts/2019-11-15-Youtube无字幕视频翻译.md

--- a/_posts/2019-11-15-Youtube无字幕视频翻译.md
+++ b/_posts/2019-11-15-Youtube无字幕视频翻译.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "Youtube无字幕视频翻译"
+show_title: "Youtube无字幕视频翻译"
+title: "2019-11-15-Youtube无字幕视频翻译"
 data: 2019-11-15 10:30
 categories:  随笔
 ---
