--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "深海迷航攻略"
+show_title:    "深海迷航攻略"
+title:    "2019-11-3-深海迷航攻略"
 date:   2019-11-3  17:12 
 categories: 随笔
 ---
