修改文件: _posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md

--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "读书笔记—《上帝掷骰子吗:量子物理史话》"
+show_title:    "读书笔记—《上帝掷骰子吗:量子物理史话》"
+title:    "2019-10-15-读书笔记—《上帝掷骰子吗:量子物理史话》"
 date:   2019-10-15  22:18 
 categories: 随笔
 ---
