修改文件: _posts/2019-09-12-小书匠与Markdown语法使用手册-适配本博客.md

--- a/_posts/2019-09-12-小书匠与Markdown语法使用手册-适配本博客.md
+++ b/_posts/2019-09-12-小书匠与Markdown语法使用手册-适配本博客.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "小书匠与Markdown语法使用手册-适配本博客"
+show_title: "小书匠与Markdown语法使用手册-适配本博客"
+title: "2019-11-23-小书匠与Markdown语法使用手册-适配本博客"
 data: 2019-11-23 16:23
 categories:  办公
 --- 
