--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "STM32F030 LL库笔记-STM32CubeIDE使用"
+show_title: "STM32F030 LL库笔记-STM32CubeIDE使用"
+title: "2019-9-12-STM32F030 LL库笔记-STM32CubeIDE使用"
 data: 2019-9-12 16:23
 categories:  STM32
 ---
