修改文件: _posts/2019-09-10-串口屏使用笔记.md

--- a/_posts/2019-09-10-串口屏使用笔记.md
+++ b/_posts/2019-09-10-串口屏使用笔记.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "串口屏使用笔记"
+show_title: "串口屏使用笔记"
+title: "2019-09-10-串口屏使用笔记"
 data: 2019-09-10 11:1
 categories:  hardware
 ---
