修改文件: _posts/2019-09-05-kicad-嘉立创SMT生产经验.md

--- a/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
+++ b/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "KICAD-嘉立创SMT生产经验"
+show_title: "KICAD-嘉立创SMT生产经验"
+title: "2019-9-KICAD-嘉立创SMT生产经验"
 data: 2019-9-5 17:55
 categories:  cad
 ---
