--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "编码规范"
+show_title: "编码规范"
+title: "2019-9-3-编码规范"
 data: 2019-9-3 15:15
 last_modified_at:  2020-04-13
 categories: c&c++
