--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "小书匠绑定第三方数据库"
+show_title: "小书匠绑定第三方数据库"
+title: "2019-11-24-小书匠绑定第三方数据库"
 data: 2019-11-24 15:15
 categories: 办公
 ---
