--- a/_posts/2019-08-29-电磁阀控制电路.md
+++ b/_posts/2019-08-29-电磁阀控制电路.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 show_title: "电磁阀控制电路"
-show_title: "2019-08-29-电磁阀控制电路"
+title: "2019-08-29-电磁阀控制电路"
 data: 2019-08-29 14:4
 categories: hardware
 ---
