--- a/_posts/2019-08-08-高达模型课堂-素组.md
+++ b/_posts/2019-08-08-高达模型课堂-素组.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "高达模型课堂-素组"
+show_title:    "高达模型课堂-素组"
+title:    "2019-8-8-高达模型课堂-素组"
 date:   2019-8-8  22:3 
 categories: 随笔
 ---
