修改文件: _posts/2019-08-04-Arduino可穿戴运动监测设备 .md

--- a/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
+++ b/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:    "可穿戴运动监测设备"
+show_title:    "可穿戴运动监测设备"
+title:    "2019-6-23-可穿戴运动监测设备"
 date:   2019-6-23  23:18 
 last_modified_at: 2019-6-23
 categories: arduino
