修改文件: _posts/2019-05-26-结构体使用前必须分配内存.md

--- a/_posts/2019-05-26-结构体使用前必须分配内存.md
+++ b/_posts/2019-05-26-结构体使用前必须分配内存.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "结构体使用前必须分配内存"
+show_title: "结构体使用前必须分配内存"
+title: "2019-5-18-结构体使用前必须分配内存"
 data: 2019-5-18 10:30
 categories: stm
 ---
