--- a/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
+++ b/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "彻底删除vscode及安装的插件和个人配置信息"
+show_title:  "彻底删除vscode及安装的插件和个人配置信息"
+title:  "2019-05-17-彻底删除vscode及安装的插件和个人配置信息"
 date:   2019-05-17 11:12
 categories: software
 ---
