--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "办公软件使用合集"
+show_title:  "办公软件使用合集"
+title:  "2019-05-17-办公软件使用合集"
 date:   2019-05-17 21:12
 categories: 办公
 ---
