--- a/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
+++ b/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "Arduino 1.8.9 和 VS code兼容乱码问题"
+show_title:  "Arduino 1.8.9 和 VS code兼容乱码问题"
+title:  "2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题"
 date:   2019-05-17 20:12
 categories: arduino
 ---
