修改文件: _posts/2019-05-15-printf函数打印输出延迟.md

--- a/_posts/2019-05-15-printf函数打印输出延迟.md
+++ b/_posts/2019-05-15-printf函数打印输出延迟.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "printf函数打印输出延迟"
+show_title:  "printf函数打印输出延迟"
+title:  "2019-05-15-printf函数打印输出延迟"
 date:   2019-05-15 22:46
 categories: stm
 ---
