修改文件: _posts/2019-04-23-wps隐私问题.md

--- a/_posts/2019-04-23-wps隐私问题.md
+++ b/_posts/2019-04-23-wps隐私问题.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "wps隐私问题"
+show_title: "wps隐私问题"
+title: "2019-04-23-wps隐私问题"
 data: 2019-04-23 13:52
 categories:  随笔
 ---
