--- a/_posts/2019-04-23-996事件简单思考.md
+++ b/_posts/2019-04-23-996事件简单思考.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: "996事件简单思考"
+show_title: "996事件简单思考"
+title: "2019-04-23-996事件简单思考"
 data: 2019-04-23 13:43
 categories:  随笔
 ---
