--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "HTML&CSS-前言"
+show_title:  "HTML&CSS-前言"
+title:  "2019-04-02-HTML&CSS-前言"
 date:   2019-04-02 11:12
 last_modified_at:  2019-12-14 
 categories: web
