--- a/_posts/2020-05-08-STM32CubeIDE软件教程 .md
+++ b/_posts/2020-05-08-STM32CubeIDE软件教程 .md
@@ -7,23 +7,22 @@ last_modified_at: 2020-05-08
 categories: software
 ---
 
-
 <!--more-->
 
-### 1.1 STM32CubeIDE介绍
+# 1. STM32CubeIDE介绍
 
 官网地址：[STM32CubeIDE官网](https://www.stmicroelectronics.com.cn/en/development-tools/stm32cubeide.html)
 
-STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
+STM32CubeIDE是一款多功能的多操作系统开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。  
 
-![STM32CubeIDE](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/en.STM32CubeIDE.jpg)
+简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
 
-STM32CubeIDE是一个先进的C/C++开发平台，具有STM32微控制器的IP配置，代码生成，代码编译和调试功能。
+STM32CubeIDE是一个高级C / C ++开发平台，具有用于STM32微控制器和微处理器的外设配置，代码生成，代码编译和调试功能。
 
-从选择的电路板中选择空的STM32 MCU或预配置的微控制器后，将创建项目并生成初始化代码。在开发期间的任何时候，用户可以返回到IP或中间件的初始化和配置，并重新生成初始化代码而不影响用户代码。
+STM32CubeIDE集成了所有STM32CubeMX功能，以提供多合一的工具体验，并节省安装和开发时间。从板上选择空的STM32 MCU、MPU或预配置的微控制器或微处理器后，将创建项目并生成初始化代码。在开发期间的任何时候，用户都可以返回外围设备或中间件的初始化和配置，并重新生成初始化代码，而不会影响用户代码。
 
-STM32CubeIDE包括构建和堆栈分析器，为用户提供有关项目状态和内存要求的有用信息。
-STM32CubeIDE还包括标准和高级调试功能，包括CPU内核寄存器，存储器和外设寄存器的视图，以及实时可变监视，串行线查看器接口或故障分析器。
+STM32CubeIDE包括构建和堆栈分析器，可为用户提供有关项目状态和内存要求的有用信息。STM32CubeIDE还包括标准和高级调试功能，包括CPU内核寄存器，存储器和外设寄存器的视图，以及实时变量监视，串行线查看器（Serial Wire Viewer）接口或故障分析器。
+
 
 主要特点：
 
