修改文件: _posts/2020-05-08-STM32CubeIDE软件教程 .md

--- a/_posts/2020-05-08-STM32CubeIDE软件教程 .md
+++ b/_posts/2020-05-08-STM32CubeIDE软件教程 .md
@@ -17,6 +17,8 @@ STM32CubeIDE是一款多功能的多操作系统开发工具，集成了TrueSTUD
 
 简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
 
+![STM32cubeIDE](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-08-STM32CubeIDE软件教程_/STM32CubeIDE.png)
+
 STM32CubeIDE是一个高级C / C ++开发平台，具有用于STM32微控制器和微处理器的外设配置，代码生成，代码编译和调试功能。
 
 STM32CubeIDE集成了所有STM32CubeMX功能，以提供多合一的工具体验，并节省安装和开发时间。从板上选择空的STM32 MCU、MPU或预配置的微控制器或微处理器后，将创建项目并生成初始化代码。在开发期间的任何时候，用户都可以返回外围设备或中间件的初始化和配置，并重新生成初始化代码，而不会影响用户代码。
