修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-show_title: "STM32F030 LL库笔记-STM32CubeIDE使用"
-title: "2019-9-12-STM32F030 LL库笔记-STM32CubeIDE使用"
+show_title: "STM32F030_LL库学习笔记"
+title: "2019-9-12-STM32F030_LL库学习笔记"
 data: 2019-9-12 16:23
 categories:  STM32
 ---
 
-## 为什么用LL库
+# 为什么用LL库
 
 标准库官方已经不更新了，虽然资料很多，所以不再使用。之后学习使用了HAL库，但最近做项目需要使用16和32KB的STM32F0芯片，使用HAL库新建个工程再加上串口，基本就是10KB+了，所以也是被迫重新选择了LL库。
 
@@ -15,78 +15,13 @@ categories:  STM32
 
 <!--more-->
 
-![标准库与Cube,LL,直接写寄存器的效率对比](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库使用笔记/标准库与Cube,LL,直接写寄存器的效率对比.png)
-
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-9-12-STM32F030_LL库学习笔记/标准库与Cube,LL,直接写寄存器的效率对比.png)
 
 总的来说：代码效率与移植性成反比的规律是明显的。与HAL相比，LL的效率优势很明显，几乎和直接写寄存器的效率相差无几。而且目前STM32cubeIDE已经支持直接生成LL工程，对于追求效率的开发应用人员来说，非常值得推荐大家使用。
 
-## 1、软件
+# 2、程序
 
-### 1.1 STM32CubeIDE介绍
-
-官网地址：[STM32CubeIDE官网](https://www.stmicroelectronics.com.cn/en/development-tools/stm32cubeide.html)
-
-STM32CubeIDE是一个多功能的集成开发工具，集成了TrueSTUDIO和STM32CubeMX，它是STM32Cube软件生态系统的一部分。简单来说就是：**STM32cubeIDE = true studio for stm32 + STM32cubeMX**
-
-![STM32CubeIDE](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/en.STM32CubeIDE.jpg)
-
-STM32CubeIDE是一个先进的C/C++开发平台，具有STM32微控制器的IP配置，代码生成，代码编译和调试功能。
-
-从选择的电路板中选择空的STM32 MCU或预配置的微控制器后，将创建项目并生成初始化代码。在开发期间的任何时候，用户可以返回到IP或中间件的初始化和配置，并重新生成初始化代码而不影响用户代码。
-
-STM32CubeIDE包括构建和堆栈分析器，为用户提供有关项目状态和内存要求的有用信息。
-STM32CubeIDE还包括标准和高级调试功能，包括CPU内核寄存器，存储器和外设寄存器的视图，以及实时可变监视，串行线查看器接口或故障分析器。
-
-主要特点：
-
-**1. 集成STM32CubeMX，提供以下服务：**
-   - STM32微控制器选择 
-   - 引脚分配，时钟，IP和中间件配置 
-   - 项目创建和初始化代码的生成
-
-**2. 基于Eclipse™/ CDT，支撑ECLIPSE的™插件，GNU C / C ++中ARM ®工具链和GDB调试器。**
-
-**3. 其他高级调试功能包括：**
-   - CPU内核，IP寄存器和内存视图
-   - 实时变量观看视图
-   - 系统分析和实时跟踪（SWV）
-   - CPU故障分析工具
-
-**4. 支持ST-LINK（STMicroelectronics）和J-Link（SEGGER）调试探针**   
-
-**5. 从Atollic导入项目® TrueSTUDIO ®和AC6系统工作台的STM32**  
-
-**6. 多支持操作系统：Windows ®，Linux的®和MacOS ®**
-
-### 1.2 STM32cubeIDE下载安装
-
-#### 1.2.1 下载
-官网下载地址： [https://www.st.com/en/development-tools/stm32cubeide.html](https://www.st.com/en/development-tools/stm32cubeide.html)  
-在页面底部找到下图，根据自己电脑操作系统下载即可，这里以Windows版为例。  右边下拉菜单还可以选择其他版本，推荐下载最新版。
-软件是免费的， 但下载时需要填写信息或者注册。  
-
-![软件下载](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库笔记-STM32CubeIDE使用/软件下载.png)
-
-#### 1.2.2 安装
-
-https://blog.csdn.net/chen18221987993/article/details/90897627  
-http://www.luyixian.cn/news_show_72848.aspx  
-https://mp.weixin.qq.com/s/w8cvEySdXs1a0kpK5wRoUw  
-
-### 1.3 新建工程模板
-
-新建工程有两种方法，如下图所示。方法2是在空项目情况下显示的快捷方式。
-
-![新建工程](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库使用笔记/新建工程.png)
-
-https://blog.csdn.net/ybhuangfugui/article/details/89702356
-https://www.strongerhuang.com/STM32Cube/STM32CubeMX/STM32CubeMX%E7%B3%BB%E5%88%97%E6%95%99%E7%A8%8B03_%E5%88%9B%E5%BB%BA%E5%B9%B6%E7%94%9F%E6%88%90%E4%BB%A3%E7%A0%81%E5%B7%A5%E7%A8%8B.html
-https://www.strongerhuang.com/STM32Cube/STM32CubeMX/STM32CubeMX%E7%B3%BB%E5%88%97%E6%95%99%E7%A8%8B04_STM32CubeMX%E5%90%84%E7%AA%97%E5%8F%A3%E7%95%8C%E9%9D%A2%E6%8F%8F%E8%BF%B0.html
-https://mp.weixin.qq.com/s?__biz=MzI4MDI4MDE5Ng==&mid=2247487135&idx=1&sn=befcd8aebe94c426181abc9a7eb49e63&chksm=ebbba374dccc2a62fbe758c656934d1f1b06b7427882ae5129f7afa1358d53674b66272c9dc7&mpshare=1&scene=21&srcid=&pass_ticket=mvZaxV8CBTwbJX1f8lVxdiRrDi5JMpgiXuPADHqY00AUxNhXi3wYjaFt8YuwpuWO#wechat_redirect
-
-## 2、程序
-
-### 2.1 GPIO操作
+## 2.1 GPIO操作
 
 示例：
 LL_mDelay(500); // 延时500ms
@@ -108,10 +43,11 @@ __STATIC_INLINE void LL_GPIO_SetOutputPin(GPIO_TypeDef *GPIOx, uint32_t PinMask)
 `LL_GPIO_TogglePin(GPIOB, LL_GPIO_PIN_3);    /* 翻转PB3输出电平`
 `LL_GPIO_ReadInputPort(GPIO_TypeDef \*GPIOx);  /* 读取引脚电平状态 */`
 
-USART
+## USART
 
-printf重定义
+### printf重定义
 
+```c++
 /* uart.c */
 #ifdef __GNUC__
 #define PUTCHAR_PROTOTYPE int __io_putchar(int ch) /* 防⽌重定义， 具体为什么会⽤到GNUC我以
@@ -156,16 +92,16 @@ void my_printf(char* fmt,...)
 }
 /* main.c*/
 my_printf("233\n"); /* 串⼝打印数据 */
-备注：
+```
+>备注：
 1、知识点：va_list
-
 3、自己编写 printf 函数比重定义节省 0.46 KB，但RAM增加了。
-
 
 其他发送方法
 
 1、只发送字符串数据
 
+```c++
 /* uart.c中定义 */
 void USART_Print(unsigned char *Send_Text,uint32_t Size_Text)
 {
@@ -239,6 +175,7 @@ void USART_RxIdleCallback(void);
 /* 使用 */
 // main.c初始化DMA
 USART_DMA_CONFIG();
+```
 备注：
 不可使用DMA3，会出现 "VDD VALUE" redefined 错误。
 只要配置了DMA，延时函数LL_mDelay()失效
