修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -176,20 +176,15 @@ void USART_RxIdleCallback(void);
 // main.c初始化DMA
 USART_DMA_CONFIG();
 ```
-备注：
+>备注：
 不可使用DMA3，会出现 "VDD VALUE" redefined 错误。
 只要配置了DMA，延时函数LL_mDelay()失效
 
 总结
 
-ADC
+## ADC
 
-MX配置
-
-
-内存占用对比
-
-
+```c++
 HAL_ADCEx_Calibration_Start(&hadc);
 HAL_ADC_Start(&hadc);
 uint16_t ADC_temp1=0;
@@ -211,3 +206,4 @@ static unsigned long raw_temp_0_value = 0;
   }
   return current_temperature;
 }
+```
