修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -63,7 +63,7 @@ categories: 办公
 注意 "\{\{\}\}" 不要丢，字符 “/”  表示目录。
 
 我的设置是：  
-`images/Posts/\{\{title\}\}/\{\{filename\}\}`
+`images/Posts/{{title}}/{{filename}}`
 
 这样我的图片保存位置就是：  
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/博客文章标题名/图片名.png)`
