修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -3,7 +3,7 @@ layout: post
 show_title: "小书匠绑定第三方数据库"
 title: "2019-11-24-小书匠绑定第三方数据库"
 data: 2019-11-24 15:15
-categories: 办公
+categories: Office
 ---
 
 绑定第三方数据库的意思就是你可以将第三方的文件夹链接到小书匠软件里，这样你在本地操作时，点击同步，数据就会实时上传到第三方数据库并更改，当然需要网络。而小书匠有个实时保存的功能，所以你可以离线编辑，再同步。
