--- a/_posts/2019-05-15-printf函数打印输出延迟.md
+++ b/_posts/2019-05-15-printf函数打印输出延迟.md
@@ -3,7 +3,7 @@ layout: post
 show_title:  "printf函数打印输出延迟"
 title:  "2019-05-15-printf函数打印输出延迟"
 date:   2019-05-15 22:46
-categories: arm
+categories: st
 ---
 
 最近编写 STM32 的 USART 函数是遇到了一个问题，重定义 printf 函数时，单独在主函数循环执行输出可以正常及时输出信息，但当加上延时函数，间断输出信息时，出现了延时输出的现象：等待一段时间后，一次性输出之前的所有信息，这期间无任何输出。且这个等待时间随着延时增减而增加。遂在网上查询到了解决方法：
