修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -3,7 +3,7 @@ layout: post
 show_title: "STM32F030_LL库学习笔记"
 title: "2019-9-12-STM32F030_LL库学习笔记"
 data: 2019-9-12 16:23
-categories:  arm
+categories:  st
 ---
 
 # 为什么用LL库
