--- a/_posts/2020-05-08-STM32CubeIDE软件教程 .md
+++ b/_posts/2020-05-08-STM32CubeIDE软件教程 .md
@@ -4,7 +4,7 @@ show_title: "2020-05-08-STM32CubeIDE软件教程"
 title: "2020-05-08-STM32CubeIDE软件教程"
 date: 2020-05-08
 last_modified_at: 2020-05-08
-categories: software
+categories: st
 ---
 
 <!--more-->
