--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -3,7 +3,7 @@ layout: post
 show_title:  "办公软件使用合集"
 title:  "2019-05-17-办公软件使用合集"
 date:   2019-05-17 21:12
-categories: 办公
+categories: software
 ---
 
 > 时间截至：2019.11.24
