--- a/_posts/2020-05-01-Google官方文档.md
+++ b/_posts/2020-05-01-Google官方文档.md
@@ -4,7 +4,7 @@ show_title: "Google官方文档"
 title: "2020-05-01-Google官方文档"
 date: 2020-05-01
 last_modified_at: 2020-05-04
-categories: 办公
+categories: others
 ---
 
 ## Google文档官方学习资料备份
