--- a/_posts/2019-09-06-Win10新版输入法使用.md
+++ b/_posts/2019-09-06-Win10新版输入法使用.md
@@ -3,7 +3,7 @@ layout: post
 show_title:    "Win10新版输入法使用"
 title:    "2019-9-6-Win10新版输入法使用"
 date:   2019-9-6  7:38 
-categories:  办公
+categories:  others
 ---
 
 ## 模糊拼音
