--- a/_posts/2019-11-15-Youtube无字幕视频翻译.md
+++ b/_posts/2019-11-15-Youtube无字幕视频翻译.md
@@ -3,7 +3,7 @@ layout: post
 show_title: "Youtube无字幕视频翻译"
 title: "2019-11-15-Youtube无字幕视频翻译"
 data: 2019-11-15 10:30
-categories:  随笔
+categories:  others
 ---
 
 1、打开Youtube，设置中字幕点击自动生成（测试了几个音频生成字幕的如网易见外工作台，aismartvip，speechlogger字幕生成的准确度和断句都不如youtube自带的好），只生成英文的，中文翻译过来的准确度差很多
