--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -3,7 +3,7 @@ layout: post
 show_title:    "读书笔记—《上帝掷骰子吗:量子物理史话》"
 title:    "2019-10-15-读书笔记—《上帝掷骰子吗:量子物理史话》"
 date:   2019-10-15  22:18 
-categories: 随笔
+categories: zothers
 ---
 
 日期：2019.07.16~07.27  
