--- a/_posts/2020-05-04-Frank自学英语攻略.md
+++ b/_posts/2020-05-04-Frank自学英语攻略.md
@@ -4,7 +4,7 @@ show_title: "Frank自学英语攻略"
 title: "2020-05-04-Frank自学英语攻略"
 data: 2019-09-06 18:10
 last_modified_at:  2020-05-04
-categories:  随笔
+categories:  zothers
 ---
 
 课时1：确定英语级别
