--- a/_posts/2019-08-08-高达模型课堂-素组.md
+++ b/_posts/2019-08-08-高达模型课堂-素组.md
@@ -3,7 +3,8 @@ layout: post
 show_title:    "高达模型课堂-素组"
 title:    "2019-8-8-高达模型课堂-素组"
 date:   2019-8-8  22:3 
-categories: 随笔
+last_modified_at:  2020-05-04
+categories: zothers
 ---
 
 ## 1、工具
