修改文件: _posts/2019-04-23-wps隐私问题.md

--- a/_posts/2019-04-23-wps隐私问题.md
+++ b/_posts/2019-04-23-wps隐私问题.md
@@ -3,7 +3,8 @@ layout: post
 show_title: "wps隐私问题"
 title: "2019-04-23-wps隐私问题"
 data: 2019-04-23 13:52
-categories:  随笔
+last_modified_at:  2019-04-23
+categories:  zothers
 ---
 
 以下内容基于网页版wps云文档操作。  
