--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 show_title:    "深海迷航攻略"
-title:    "2019-11-3-深海迷航攻略"
-date:   2019-11-3  17:12 
+title:    "2019-11-03-深海迷航攻略"
+date:   2019-11-03  17:12 
+last_modified_at: 2019-11-03
 categories: others
 ---
 
