修改文件: _posts/2019-04-23-996事件简单思考.md

--- a/_posts/2019-04-23-996事件简单思考.md
+++ b/_posts/2019-04-23-996事件简单思考.md
@@ -4,7 +4,7 @@ show_title: "996事件简单思考"
 title: "2019-04-23-996事件简单思考"
 data: 2019-04-23 13:43
 last_modified_at:  2019-04-23
-categories:  zohters
+categories:  zothers
 ---
 
 最近996事件愈演愈烈，各界大佬频繁发声，有好有坏。但似乎所有人都忽略了这件事情的本质：996是违法的，我国法律明确规定每月加班不超过36小时，逾时支付150-300%的加班费。
