修改文件: _posts/2019-11-24-版权声明.md

--- a/_posts/2019-11-24-版权声明.md
+++ b/_posts/2019-11-24-版权声明.md
@@ -3,7 +3,7 @@ layout: post
 show_title:    "版权声明"
 title:    "2019-11-24-版权声明"
 date:   2019-11-24  15:55 
-categories: others
+categories: zothers
 ---
 
 ## 基本信息
